# Similarity-Measures

Time-Series_Similarity_C++/Multivariate-Time-Series/: README.txt
Time-Series_Similarity_C++/Multivariate-Time-Series/CMake/: CMakeLists.txt
Time-Series_Similarity_C++/Multivariate-Time-Series/CMake/include/: DiscreteFrechet.hpp  Dtw.hpp  Edr.hpp  Erp.hpp  Exception.h  Facade.hpp  Frechet.hpp  Hausdorff.hpp  Interface.hpp  Output.hpp  Twed.hpp  Wdtw.hpp
Time-Series_Similarity_C++/Multivariate-Time-Series/CMake/src/: Cidtw.cpp  Classifier.cpp  DiscreteFrechet.cpp  Dtw.cpp  Edr.cpp  Erp.cpp  Facade.cpp  Frechet.cpp  Functions.cpp  Hausdorff.cpp  Input.cpp  Interface.cpp  OneNearestNeighbour.cpp  Output.cpp  Similarity.cpp  Sspd.cpp  Swale.cpp  TimeSeries.cpp  Wdtw.cpp  main.cpp
Time-Series_Similarity_C++/Multivariate-Time-Series/CSV_to_TSD/: CSV_to_TSD.cpp  README.txt
Time-Series_Similarity_C++/Multivariate-Time-Series/CSV_to_TSD/Data_Example/: Data.csv
Time-Series_Similarity_C++/Multivariate-Time-Series/Workplace/SimilarityMeasures/: main.cpp
Time-Series_Similarity_C++/Univariate-Time-Series/: README.txt
Time-Series_Similarity_C++/Univariate-Time-Series/CMake/: CMakeLists.txt
Time-Series_Similarity_C++/Univariate-Time-Series/CMake/include/: Cidtw.hpp  DiscreteFrechet.hpp  Edr.hpp  Erp.hpp  Exception.h  Facade.hpp  Frechet.hpp  Functions.hpp  Input.hpp  Interface.hpp  MeasureSimilarity.hpp  Sspd.hpp  TimeSeries.hpp  Twed.hpp  Wdtw.hpp
Time-Series_Similarity_C++/Univariate-Time-Series/CSV_to_TSD/: CSV_to_TSD.cpp
(+79 files in other folders)
